# ChangeLog for net-misc/clamz
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/clamz/ChangeLog,v 1.3 2011/02/16 18:55:24 tomka Exp $

  16 Feb 2011; Thomas Kahle <tomka@gentoo.org> clamz-0.4.ebuild:
  x86 stable per bug 353125

  10 Feb 2011; Markos Chandras <hwoarang@gentoo.org> clamz-0.4.ebuild:
  Stable on amd64 wrt bug #353125

*clamz-0.4 (27 May 2010)

  27 May 2010; Jim Ramsay <lack@gentoo.org> +clamz-0.4.ebuild,
  +metadata.xml:
  New package: clamz is a command-line downloader for the Amazon.com MP3
  music store (Bug #267873)
