@@ -2,13 +2,25 @@
 Hash: SHA1
 
 DIST clamz-0.4.tar.gz 73830 RMD160 6dc382d66db37b318dc5e988a7aaa2144fb16806 SHA1 777a2695840c326e2e415bf986d10ad9d7c931bf SHA256 ecc09d09ad329f2e24c9381983a56de3c944e3a933183ca342d25d5917f34968
+DIST clamz-0.5.tar.gz 75001 RMD160 a79698ba456a8c1b5401347a5d7506451e113aa3 SHA1 54664614e5098f9e4e9240086745b94fe638b176 SHA256 5a63f23f15dfa6c2af00ff9531ae9bfcca0facfe5b1aa82790964f050a09832b
 EBUILD clamz-0.4.ebuild 1049 RMD160 d7c4ecee58839e44b63636ca026f50e8b0b19478 SHA1 d29c3761f97adb9e1b85ef2572480f0ebb2abf44 SHA256 39f7abfcfda81b2fa936ca3616073aadb46c87e06269666c6db94db220de0da4
-MISC ChangeLog 608 RMD160 4792e34fc5fc7e25b697baf8c3b560d59be1bdf3 SHA1 2e7a7549cc21110e318ea17bac93d743d1dd9144 SHA256 77b0065a8f94f5e23e72311c78034bb8c53054f0c211fa6bcfbf5290c1c95059
+EBUILD clamz-0.5.ebuild 1050 RMD160 ddb0a330d62d0ab1c5aba305ece1581003b64b60 SHA1 e58212f09928d4c09de130bec78772bd75f41265 SHA256 853bc12e0e9f7c61425a4d27044ebe7719a9f607b9aa27b89d9c751e6a4b87f4
+MISC ChangeLog 742 RMD160 91520347e9d9db6aa1a1e9616e6031867c989405 SHA1 c87a775aedeca045e65492bb79bf29c6401e72df SHA256 111a47cee21be47b99a457d7f5ca206d9978d36ae9a48cab3ec04903d1618677
 MISC metadata.xml 255 RMD160 2e5514ea208e220a2d2b5780925be2a79ecd7d41 SHA1 e6cc4e2498a8aa5e325006da842fa43db365dcde SHA256 a845367d23d1fbccc1884ad4954871d6027a63408caab5eac21159e987e4fede
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk1cG/QACgkQnZsgo/h8kNZongCeOTclDHTEcKSgVPAPB4j+HPIf
-gx4An0m1114/YxrCiOK/+2KZIZBiOxsw
-=n74b
+iQIcBAEBAgAGBQJO4hwzAAoJEA8o5SF9Rr6qaSsP/jGoc6VCnmIHROye2BDKD7MN
+uXwRCWDe5MORUp8PqYFMaEJdiK8/ZVDEWaaUiHK16Ld4y6wPmrVqdLs+em9dYy2Z
+Jwms1JxwH79ykKt0P43+V4b+sZnmTTUL+Wl9zO+r1Vj/Eqce20xdzoooJV9KPCzn
+HnnGTC6uZhKm/yVBDzioBnadAymIayLflVPXwSOr6HQo7boBQ5TqK7rJQBgTY+6P
+J5aI+76Cvs+8VV6Hh/tuGQ7Y47VK2RHg9DagfjZxPXS3BlwCHyWJNtEfH5qBWgQ2
+l1i28e7Ei3ynklHQqeeyhOSXm38e6YKtDz+LcYCHtJyDHGQY0oFsfPdPbw031JXn
+jjsbc5SySyTvFuNgeA11upDBqxRi80w+i7G/9KqvCzAAEC/orT3AY3xTdH3qxJ+n
+5KDPjxrGF8H1+B2HzbfRxkLBVp+sV6kXeDNF9SLqs8w838a44rL8EHh+9vl33dPu
+EzsokG+bDJYxj62NFCEeCubfYOtKNYknRyAGWrcUyl0GMVYpPl5UzWvDSNGuMSO5
+lSt6Z+6zcj64YGx2VU7xOlx/u2JuRHZ7V2D0Uu5SxbmWMym2k4DV4BvyD3yiXnjt
+NLGPsvjZLFva17sArhI+aWsheHzdO+XLO2i1xsE26/RuxJEQEdL4skRtJp2Kugi/
+C98Ob+mMU3Bm6QuAQqDp
+=fjnf
 -----END PGP SIGNATURE-----
