@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/clamz
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/clamz/ChangeLog,v 1.3 2011/02/16 18:55:24 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/clamz/ChangeLog,v 1.4 2011/12/09 14:33:12 lack Exp $
+
+*clamz-0.5 (09 Dec 2011)
+
+  09 Dec 2011; Jim Ramsay <jim_ramsay@gentoo.org> +clamz-0.5.ebuild:
+  Bug #393575: Version 0.5 is released
 
   16 Feb 2011; Thomas Kahle <tomka@gentoo.org> clamz-0.4.ebuild:
   x86 stable per bug 353125
